--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-text-truncate": "^0.16.0",
+    "react-toastify": "^6.0.6",
     "typescript": "^3.9.3"
   },
   "scripts": {
